# topicgenerator-fastapi

./: .gitlab-ci.yml  CHANGELOG.md  Dockerfile  README.md  analyze_topic_tree.py  compose.yml  main.py  pyproject.toml  requirements.txt
src/: prompts.py  structured_text_helper.py
src/DTOs/: collection.py  ping.py  properties.py  topic_tree.py  topic_tree_request.py
