[project]
name = "topic-tree-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "backoff>=2.2.1",
    "fastapi[standard]>=0.115.11",
    "loguru>=0.7.3",
    "openai>=1.61.1",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "ruff>=0.11.0",
]

[tool.ruff]
line-length = 120
